--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.2.0",
+    "@apollo/client": "^3.5.9",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -18,6 +20,7 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
